perf+test: Phase 1 GC tuning + Phase 0-D codec characterization tests
Phase 1 (start) — runtime:
- Example_Start scripts (Windows/Linux): add -XX:+UseZGC
  -XX:+UseCompactObjectHeaders (verified accepted on Temurin 25),
  fix encoding to UTF-8, correct stale jar name 3.5.3 -> 4.2.45.
  Config-only; lower GC pauses + lower RAM with many in-memory objects.

Phase 0-D (partial) — safety net on the packet hot path:
- GameCodecCharacterizationTest (EmbeddedChannel): inbound/outbound
  framing, header-only frame, encode->decode round-trip.
- PacketSerializationCharacterizationTest: ClientMessage defensive
  reads (bogus string length clamps, never throws/desyncs) +
  ServerMessage length-prefix framing.

Deferred (documented in the design doc, need a running DB / integration
test / bootstrap harness): virtual threads on GamePacketHandler
(per-channel ordering risk), Phase 3 perf measurement, room-loop &
pathfinding characterization, Phase 4 refactors.

Verified on Temurin 25.0.3: mvn clean verify -> 387 tests, 0 failures,
BUILD SUCCESS.